# silk

./: .gitignore  LICENSE  Makefile  OCamlMakefile  README.md  TODO.md  build.sh  clean.sh  compile.sh  dune-project  index.html  langref.html  langref.md  silk.opam  style.css  syntax.html  syntax.md  test.llvm  test.llvm.s  test.silk
src/: .gitignore  codegen.ml  dune  lexer.mll  menhir_parser.mly  ocamllex_lexer.mll  parser.mly  parsetree.ml  silk.ml  symtab.ml  template.ml  util.ml
test/: array.silk  assign.silk  binops.silk  cast.silk  code.silk  code2.silk  deref.silk  float.silk  fwd_decl.silk  globals.silk  ops.silk  prog.silk  string.silk  struct.silk  struct2.silk  syntax.silk  template.silk  test.silk  tree.silk  types.silk
